--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -5,9 +5,9 @@ services:
     container_name: catalogdb
     restart: always
     ports:
-      - "27017:27017"
+        - "27017:27017"
     volumes:
-      - mongo_data:/data/db
+        - mongo_data:/data/db
 
   basketdb:
     container_name: basketdb
@@ -15,11 +15,22 @@ services:
     ports:
       - "6379:6379"
 
+  portainer:
+    container_name: portainer
+    restart: always
+    ports:
+      - "8080:8000"
+      - "9000:9000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+
   catalog.api:
     container_name: catalog.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017"
+      - "ElasticConfiguration:Uri=http://elasticsearch:9200"
     depends_on:
       - catalogdb
     ports:
