--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -5,11 +5,15 @@ services:
     image: mongo
   basketdb:
     image: redis:alpine
+  portainer:
+    image: portainer/portainer-ce
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
       context: .
       dockerfile: Services/Catalog/Catalog.API/Dockerfile
+
   basket.api:
     image: ${DOCKER_REGISTRY-}basketapi
     build:
@@ -18,4 +22,4 @@ services:
 
 volumes:
   mongo_data:
-
+  portainer_data:
